--- a/app/components/socials/socials.scss
+++ b/app/components/socials/socials.scss
@@ -5,8 +5,9 @@
   $b: &;
 
   &__link {
-    width: 56px;
-    height: 56px;
+    @include rule(width, (xl: 56px, sm: 44px));
+    @include rule(height, (xl: 56px, sm: 44px));
+
     border-radius: 100%;
     box-sizing: border-box;
     border: 1px solid $color-gray-6;
@@ -20,7 +21,7 @@
     }
 
     &:not(:first-child) {
-      margin-left: 24px;
+      @include rule(margin-left, (xl: 24px, sm: 20px));
     }
 
     svg {
