--- a/app/components/team/team.pug
+++ b/app/components/team/team.pug
@@ -2,7 +2,7 @@ mixin team()
   +b.team&attributes(attributes)
     +grid
       each item in getData('team')
-        +col({xl: 3})
+        +col({xl: 3, md: 4, sm: 12})
           +e.item
             +e.photo-wrapper
               +e.photo
