--- a/app/components/video/video.scss
+++ b/app/components/video/video.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
 
   &:not(:first-child) {
-    margin-top: 40px;
+    @include rule(margin-top, (xl: 40px, sm: 30px));
   }
 
   $b: &;
